# composerlib

./: .codedocs  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  docs.yml
cmake/: functions.cmake
docs/: _config.yml  algorithms.md  contributing.md  criteria.md  index.md  integration.md  limitations.md  quick-start.md  references.md  roadmap.md  thanks.md
docs/integration/: build-from-source.md  packages.md
docs/integration/build-from-source/: building-the-examples.md  building-the-packages.md  dependencies.md  installing-from-source.md
docs/integration/cmake-targets/: cmake-with-automatic-download.md  find-it-as-a-cmake-package.md  use-it-as-a-cmake-subdirectory.md
examples/: CMakeLists.txt  audio.cpp  example_optimizer.cpp  melody.cpp  midi_file.cpp  mono_objective.cpp  note.cpp  notes.midi  optimizer.cpp  pareto_front.cpp  play_midi.cpp  synth.cpp  weighted_sum_method.cpp
examples/resources/: exp-01.midi
lib/: CMakeLists.txt
lib/audio/: devices.h  midi_processor.cpp  midi_processor.h  synth.cpp  synth.h  synthesizer.cpp  synthesizer.h
lib/notes/: notes.cpp  notes.h
source/: CMakeLists.txt
source/audio/: synth.cpp  synth.h
source/composer/: genetic_algorithm.cpp  genetic_algorithm.h  genetic_algorithm.hpp  harmony.cpp  harmony.h  main.cpp  melody.cpp  melody.h  melody_p.cpp  melody_p.h  melody_problem.cpp  melody_problem.h  midi_io.cpp  midi_io.h  midi_processor.cpp  midi_processor.h  midi_stream.cpp  midi_stream.h  nsga_ii.cpp  nsga_ii.h  nsga_ii.hpp  objective_parameters.cpp  objective_parameters.h  optimizer.h  optimizer.hpp  synth.cpp  synth.h
source/composerlib/: genetic_algorithm.cpp  genetic_algorithm.h  melody.cpp  melody.h  melody_problem.cpp  melody_problem.h  nsga_ii.cpp  nsga_ii.h  optimizer.h  optimizer.hpp
source/midi/: midi_processor.h  midi_stream.cpp  midi_stream.h  smf_io.cpp  smf_io.h  smf_reader.cpp  smf_reader.h
source/smf/: SMFProcessor.cpp  SMFProcessor.h  SMFReader.cpp  SMFReader.h  smf_processor.cpp  smf_processor.h
standalone/: CMakeLists.txt
standalone/gui/: CMakeLists.txt  application.cpp  application.h  main.cpp
tests/benchmarks/: CMakeLists.txt  melody_benchmark.cpp
tests/unit_tests/: CMakeLists.txt  ut_melody.cpp  ut_midi_stream.cpp  ut_readsmf.cpp  ut_writesmf.cpp
tests/unit_tests/resources/: twinkle.midi
